# website

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  index.html  main.go
src/: main.rs  routes.rs  tls.rs
static/scripts/: commands.js  main.js
static/styles/: commands.css  error.css  index.css  main.css  premium.css  privacy-and-terms.css
templates/: commands.stpl  desktop-nav.stpl  error.stpl  footer.stpl  head.stpl  index.stpl  jumbotron-header.stpl  navbar.stpl  premium.stpl  privacy.stpl  terms.stpl
templates/components/: desktop-nav.stpl  footer.stpl  head.stpl  mobile-nav.stpl
views/: head.html  index.html  privacy.html  terms.html
