[package]
name = "eliza-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = { version = "4", features = ["rustls"] }
rustls = "0.20"
rustls-pemfile = "1"
sailfish = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
